# GleichungsG

./: AGENTS.md  LICENSE  README.md  StreamlitAGENT.md  app.py  gleichungs_generator.py  gleichungsgenerator.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: gleichungsgenerator.py
tests/: test_generate_equations.py  test_l1_solution.py  test_numeric_limits.py  test_ruff.py
