[project]
name = "gleichungen"
version = "0.1.0"
description = "Generator für lineare Gleichungen"
requires-python = ">=3.10"
dependencies = [
    "sympy~=1.12",
    "python-docx~=1.1",
    "streamlit",
    "pillow",
]

[project.scripts]
gleichungen = "gleichungs_generator:main"

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
